build_tools/kube_config/live/game-portal-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config --volumes=configMap
    kompose.image-pull-policy: Never
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: game-portal-client
  name: game-portal-client
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8002
  selector:
    io.kompose.service: game-portal-client
status:
  loadBalancer: {}
