build_tools/kube_config/live/game-rps-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config --volumes=configMap
    kompose.image-pull-policy: Never
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: game-rps
  name: game-rps
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "8085"
      port: 8085
      targetPort: 8085
  selector:
    io.kompose.service: game-rps
status:
  loadBalancer: {}
