build_tools/kube_config/live/matchmaker-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config --volumes=configMap
    kompose.image-pull-policy: Never
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: matchmaker-worker
  name: matchmaker-worker
spec:
  ports:
    - name: "5051"
      port: 5051
      targetPort: 5051
  selector:
    io.kompose.service: matchmaker-worker
status:
  loadBalancer: {}
