build_tools/kube_config/live/stats-tracker-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config/generated
    kompose.image-pull-policy: Never
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: stats-tracker-worker
  name: stats-tracker-worker
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5002
  selector:
    io.kompose.service: stats-tracker-worker
status:
  loadBalancer: {}
